3.7.0.0/TRANSLATION_STATUS.zh-TW.md
# 翻譯狀態 (3.7.0.0)

> 🌐 [English](TRANSLATION_STATUS.md) | **繁體中文**

自 3.5.0.0 自動遷移：英文沒變動的 key 沿用上一版譯文；新增或變動的 key 標記為 `untranslated`（在譯者補上前先顯示英文）。

- 字串總數（兩專案合計）: 473
- 產生時間: 2026-07-11 00:17:45 +08:00

快速跳轉: [es-ES](#es-es) · [tr-TR](#tr-tr)

## 整體（兩專案合計）

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 450 | 23 | 95% |
| tr-TR | 444 | 29 | 93% |

## 專案: OmniConsole

字串數: 451

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 433 | 18 | 96% |
| tr-TR | 427 | 24 | 94% |

## 專案: OmniConsole.PhantomLink

字串數: 22

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 17 | 5 | 77% |
| tr-TR | 17 | 5 | 77% |

## 待翻譯的 key

### es-ES

**OmniConsole**

新增 (15):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`

變動（需重譯） (3):
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`

**OmniConsole.PhantomLink**

新增 (5):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`

### tr-TR

**OmniConsole**

新增 (15):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`

變動（需重譯） (9):
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `BackgroundMaterialSetting_Title.Text`
- `BackgroundMaterialSetting_Description.Text`
- `BackgroundMaterialSetting_Note.Text`
- `BackgroundMaterialItem_PhantomClassic`
- `BackgroundMaterialItem_PhantomGlass`
- `BackgroundMaterialItem_PhantomGlassDeep`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`

**OmniConsole.PhantomLink**

新增 (5):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`
